# JAKA_Lumi

./: .gitignore  README.md
02. JAKA Lumi Product Manual [产品手册]/: Lumi SDK【使用说明】SDK.md
02. JAKA Lumi Product Manual [产品手册]/05. 升降柱使用说明/lumi_release/: ReleaseNote.md
02. JAKA Lumi Product Manual [产品手册]/ACT学习与推理【安装文档】/: Docker下ACT学习与推理安装文档及配置说明v1.0.docx
02. JAKA Lumi Product Manual [产品手册]/AGV底盘【使用说明】/: 新底盘接口说明.docx
02. JAKA Lumi Product Manual [产品手册]/升降柱使用说明/lumi_release/doc/: LumiAPI.md
02. JAKA Lumi Product Manual [产品手册]/升降柱使用说明/lumi_release/example/body_head/: lumi_url.py
03. JAKA Lumi Related Software [软件安装包]/: README.md  Teleoperation and training code.md
03. JAKA Lumi Related Software [软件安装包]/Lumi_Teleoperation/src/k1_msgs/: CMakeLists.txt  package.xml
03. JAKA Lumi Related Software [软件安装包]/Lumi_Teleoperation/src/k1_msgs/srv/: JointMove.srv  KineInverse7.srv  LinearMove.srv
03. JAKA Lumi Related Software [软件安装包]/Lumi_Teleoperation/src/k1_robot/: package.xml  setup.cfg  setup.py
03. JAKA Lumi Related Software [软件安装包]/Lumi_Teleoperation/src/k1_robot/k1_robot/: control_gripper.py  control_gripper_test.py  lumi_home.py  pub_set_pos.py  robot_interface.py  robot_servo.py  send_robot_pose_filter_log.txt  send_robot_pose_log.txt
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/: 1.py  Alignment_data.py  JAKA_utils.py  action_publisher.py  augment_images.py  calculate_cel.py  collect.py  compress_data.py  constants.py  control_gripper.py  eval.py  eval_diffusion.py  eval_interface.py  eval_xy.py  extract_dynamic_objects.py  extract_images.py  get_images.py  imitate_episodes.py  load_hdf5.py  or_utils.py  policy.py  pubulisher.py  requirements.txt  save_image_to_disk.py  synthetic_demo_data.py  test.py  train.py  train_diffusion.py  tts.py  utils.py  visualize_episodes.py
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/JAKASDK/: 1-JAKA_usage.py  2-SIM_usage.py  3-SIM_forward.py  4-transfer_DH2JAKA.py  5-transfer_SIM2JAKA.py  6-test_move.py  7-move_to_cube.py  8-grab_cube.py  9-inverse_space.py  JAKA_SDK_contorlSim.py  JAKA_utils.py  JAKA_utils_all.py  Test.ipynb  test.py
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/detr/: main.py
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/detr/models/: detr_vae.py
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/log/: latest_build
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/wandb/: latest-run
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/wandb/offline-run-20250721_023952-nvt4jguv/: run-nvt4jguv.wandb
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/wandb/offline-run-20250721_024211-0mmfz265/: run-0mmfz265.wandb
03. JAKA Lumi Related Software [软件安装包]/Lumi_Training/wandb/offline-run-20250721_025919-xl43xjyb/: run-xl43xjyb.wandb
04. JAKA Lumi Demo Case [示例]/LUMI_DEMO-v2/: AutoCalibProccess.py  README.md  multi_station_demo.py  system_config.json  test_client.py
04. JAKA Lumi Demo Case [示例]/LUMI_DEMO-v2/utilfs/: jaka.py  tools.py
JAKA_Lumi_Demo_Case/: Lumi pick and place demo code.md
JAKA_Lumi_Demo_Case/body_head/: 1_reset_enable_status.py  2_moveto.py
JAKA_Lumi_Demo_Case/compose/: multi_station_demo.py  requirements.txt  socket_control_server.py  visualDetect_ali.py  visualValidCalib.py  标定.md
JAKA_Lumi_Demo_Case/compose/conf/: CalibParams-lumi-hand.json  userCmdControl.json  userCmdControlMock.json
JAKA_Lumi_Demo_Case/compose/utilfs/: handToEyeCalibration.py  jaka_integrated.py  jaka_integrated_mock.py  lumi_url.py
jaka_lumi_ros/: README.md  launches.py
jaka_lumi_ros/src/jaka_lumi_body_node/: CMakeLists.txt  package.xml
jaka_lumi_ros/src/jaka_lumi_body_node/launch/: lumi_body_node.launch.py
jaka_lumi_ros/src/jaka_lumi_body_node/src/: lumi_body_node.cpp
jaka_lumi_ros/src/jaka_lumi_body_node/srv/: MoveService.srv  ReadStatusService.srv
jaka_lumi_ros/src/jaka_lumi_body_server/: CMakeLists.txt  package.xml
jaka_lumi_ros/src/jaka_lumi_body_server/launch/: lumi_body_server.launch.py
jaka_lumi_ros/src/jaka_lumi_body_server/src/: lumi_body_server.cpp
jaka_lumi_ros/src/jaka_lumi_description/: CMakeLists.txt  package.xml
jaka_lumi_ros/src/jaka_lumi_description/config/: joint_names-Jaka_lumi.yaml  lumi_body.rviz
jaka_lumi_ros/src/jaka_lumi_description/launch/: lumi_description.launch.py
jaka_lumi_ros/src/jaka_lumi_description/meshes/: link_2.STL
jaka_lumi_ros/src/jaka_lumi_description/urdf/: jaka_lumi.urdf
jaka_lumi_ros/src/jaka_lumi_description/urdf/jaka_lumi/: jaka_lumi.usd  jaka_lumi_moveit.usd
jaka_lumi_ros/src/jaka_lumi_description/urdf/jaka_lumi/configuration/: jaka_lumi_physics.usd  jaka_lumi_sensor.usd
jaka_lumi_ros/src/jaka_lumi_isaacsim/: CMakeLists.txt  package.xml
jaka_lumi_ros/src/jaka_lumi_isaacsim/launch/: run_isaacsim.launch.py  run_lumi_isaacsim.launch.py
jaka_lumi_ros/src/jaka_lumi_isaacsim/scripts/: isaacsim_moveit.py  open_isaacsim_stage.py  run_isaacsim.py
jaka_lumi_ros/src/jaka_lumi_minicobo_arm_server/: CMakeLists.txt  package.xml
jaka_lumi_ros/src/jaka_lumi_minicobo_arm_server/include/jaka_lumi_minicobo_arm_server/: JAKAZuRobot.h  jkerr.h  jktypes.h
jaka_lumi_ros/src/jaka_lumi_minicobo_arm_server/launch/: lumi_minicobo_arm_server.launch.py
jaka_lumi_ros/src/jaka_lumi_minicobo_arm_server/src/: lumi_minicobo_arm_server.cpp
jaka_lumi_ros/src/jaka_lumi_moveit_config/: .setup_assistant  package.xml
jaka_lumi_ros/src/jaka_lumi_moveit_config/config/: initial_positions.yaml  jaka_lumi.ros2_control.xacro  jaka_lumi.srdf  jaka_lumi.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
jaka_lumi_ros/src/jaka_lumi_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+9 files in other folders)
