<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jaka_lumi_body_node</name>
  <version>0.0.1</version>
  <description>ROS 2 node for controlling Lumi body joints via HTTP APIs.</description>
  <maintainer email="medhanit@jaka.com">meddy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>std_srvs</depend>

  <exec_depend>curl</exec_depend>

  <build_depend>rosidl_runtime_cpp</build_depend>
  <build_depend>rosidl_runtime_py</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <build_export_depend>rosidl_runtime_cpp</build_export_depend>
  <build_export_depend>rosidl_runtime_py</build_export_depend>

  <exec_depend>rosidl_runtime_cpp</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
