<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jaka_lumi_body_server</name>
  <version>0.0.1</version>
  <description>ROS 2 action server for controlling the Lumi body joints via HTTP.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>curl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
